@@ -23,26 +23,21 @@
  */
 package dk.alexandra.fresco.lib.math.integer.division;
 
-import dk.alexandra.fresco.framework.BuilderFactory;
+import dk.alexandra.fresco.framework.Application;
 import dk.alexandra.fresco.framework.Computation;
-import dk.alexandra.fresco.framework.ProtocolFactory;
-import dk.alexandra.fresco.framework.ProtocolProducer;
-import dk.alexandra.fresco.framework.TestApplication;
 import dk.alexandra.fresco.framework.TestThreadRunner.TestThread;
 import dk.alexandra.fresco.framework.TestThreadRunner.TestThreadConfiguration;
 import dk.alexandra.fresco.framework.TestThreadRunner.TestThreadFactory;
-import dk.alexandra.fresco.framework.builder.numeric.BuilderFactoryNumeric;
 import dk.alexandra.fresco.framework.builder.numeric.NumericBuilder;
 import dk.alexandra.fresco.framework.builder.numeric.ProtocolBuilderNumeric;
 import dk.alexandra.fresco.framework.network.ResourcePoolCreator;
 import dk.alexandra.fresco.framework.sce.resources.ResourcePool;
+import dk.alexandra.fresco.framework.util.Pair;
 import dk.alexandra.fresco.framework.value.SInt;
-import dk.alexandra.fresco.lib.field.integer.BasicNumericFactory;
-import dk.alexandra.fresco.lib.helper.SequentialProtocolProducer;
-import dk.alexandra.fresco.lib.helper.builder.NumericIOBuilder;
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.hamcrest.core.Is;
 import org.junit.Assert;
 
@@ -55,6 +50,19 @@ import org.junit.Assert;
  *
  */
 public class DivisionTests {
+
+  public static Application<Pair<BigInteger, BigInteger>, ProtocolBuilderNumeric>
+  createDivideApplication(BigInteger x, BigInteger d) {
+    return (producer) -> {
+      NumericBuilder numeric = producer.numeric();
+      Computation<SInt> input1 = numeric.input(x, 1);
+      Computation<SInt> division = producer.seq(new KnownDivisor(input1, d));
+      Computation<SInt> remainder = producer.seq(new KnownDivisorRemainder(input1, d));
+      Computation<BigInteger> output1 = numeric.open(division);
+      Computation<BigInteger> output2 = numeric.open(remainder);
+      return () -> new Pair<>(output1.out(), output2.out());
+    };
+  }
 
   /**
    * Test Euclidian division
@@ -71,50 +79,19 @@ public class DivisionTests {
 
         @Override
         public void test() throws Exception {
-          List<Computation<BigInteger>> cOutputs = new ArrayList<>();
-          TestApplication app = new TestApplication() {
-
-            @Override
-            public ProtocolProducer prepareApplication(BuilderFactory factoryProducer) {
-              ProtocolFactory producer = factoryProducer.getProtocolFactory();
-
-              BasicNumericFactory basicNumericFactory = (BasicNumericFactory) producer;
-
-              NumericIOBuilder ioBuilder = new NumericIOBuilder(basicNumericFactory);
-              SequentialProtocolProducer sequentialProtocolProducer =
-                  new SequentialProtocolProducer();
-
-              SInt input1 = ioBuilder.input(x, 1);
-              BigInteger input2 = d;
-              sequentialProtocolProducer.append(ioBuilder.getProtocol());
-
-              ProtocolBuilderNumeric applicationRoot = ProtocolBuilderNumeric
-                  .createApplicationRoot((BuilderFactoryNumeric) factoryProducer, (seq) -> {
-                    Computation<SInt> division = seq.seq(new KnownDivisor(
-                        () -> input1, input2));
-
-                Computation<SInt> remainder =
-                    seq.seq(new KnownDivisorRemainder(() -> input1, input2));
-                NumericBuilder NumericBuilder = seq.numeric();
-                Computation<BigInteger> output1 = NumericBuilder.open(division);
-                Computation<BigInteger> output2 = NumericBuilder.open(remainder);
-                cOutputs.add(output1);
-                cOutputs.add(output2);
-              });
-              sequentialProtocolProducer.append(applicationRoot.build());
-              return sequentialProtocolProducer;
-            }
-          };
-          secureComputationEngine.runApplication(app,
-              ResourcePoolCreator.createResourcePool(conf.sceConf));
-          BigInteger quotient = cOutputs.get(0).out();
-          BigInteger remainder = cOutputs.get(1).out();
+          Application<Pair<BigInteger, BigInteger>, ProtocolBuilderNumeric> app =
+              DivisionTests.createDivideApplication(x, d);
+          Pair<BigInteger, BigInteger> result = secureComputationEngine
+              .runApplication(app, ResourcePoolCreator.createResourcePool(conf.sceConf));
+          BigInteger quotient = result.getFirst();
+          BigInteger remainder = result.getSecond();
 
           Assert.assertThat(quotient, Is.is(x.divide(d)));
           Assert.assertThat(remainder, Is.is(x.mod(d)));
 
 
         }
+
       };
     }
   }
@@ -122,12 +99,14 @@ public class DivisionTests {
   /**
    * Test Euclidian division
    */
-  public static class TestEuclidianDivisionLargeDivisor extends TestThreadFactory {
+  public static class TestEuclidianDivisionLargeDivisor<ResourcePoolT extends ResourcePool>
+      extends TestThreadFactory<ResourcePoolT, ProtocolBuilderNumeric> {
+
 
     @Override
-    public TestThread next(TestThreadConfiguration conf) {
+    public TestThread next(TestThreadConfiguration<ResourcePoolT, ProtocolBuilderNumeric> conf) {
 
-      return new TestThread() {
+      return new TestThread<ResourcePoolT, ProtocolBuilderNumeric>() {
         private final BigInteger x = new BigInteger("123978634193227335452345761");
         private final BigInteger d = new BigInteger("345195198248564927489350624"
             + "95619070576369242887355682637129830065132507683532321771277227216"
@@ -135,47 +114,16 @@ public class DivisionTests {
 
         @Override
         public void test() throws Exception {
-          List<Computation<BigInteger>> cOutputs = new ArrayList<>();
-          TestApplication app = new TestApplication() {
-
-            @Override
-            public ProtocolProducer prepareApplication(BuilderFactory factoryProducer) {
-              ProtocolFactory producer = factoryProducer.getProtocolFactory();
-
-              BasicNumericFactory basicNumericFactory = (BasicNumericFactory) producer;
-
-              NumericIOBuilder ioBuilder = new NumericIOBuilder(basicNumericFactory);
-              SequentialProtocolProducer sequentialProtocolProducer =
-                  new SequentialProtocolProducer();
-
-              SInt input1 = ioBuilder.input(x, 1);
-              BigInteger input2 = d;
-              sequentialProtocolProducer.append(ioBuilder.getProtocol());
-
-              ProtocolBuilderNumeric applicationRoot = ProtocolBuilderNumeric
-                  .createApplicationRoot((BuilderFactoryNumeric) factoryProducer, (seq) -> {
-                    Computation<SInt> division = seq.seq(new KnownDivisor(
-                        () -> input1, input2));
-
-                Computation<SInt> remainder =
-                    seq.seq(new KnownDivisorRemainder(() -> input1, input2));
-                NumericBuilder NumericBuilder = seq.numeric();
-                Computation<BigInteger> output1 = NumericBuilder.open(division);
-                Computation<BigInteger> output2 = NumericBuilder.open(remainder);
-                cOutputs.add(output1);
-                cOutputs.add(output2);
-              });
-              sequentialProtocolProducer.append(applicationRoot.build());
-              return sequentialProtocolProducer;
-            }
-          };
-          secureComputationEngine.runApplication(app,
-              ResourcePoolCreator.createResourcePool(conf.sceConf));
-          BigInteger quotient = cOutputs.get(0).out();
-          BigInteger remainder = cOutputs.get(1).out();
+          Application<Pair<BigInteger, BigInteger>, ProtocolBuilderNumeric> app =
+              DivisionTests.createDivideApplication(x, d);
+          Pair<BigInteger, BigInteger> result = secureComputationEngine
+              .runApplication(app, ResourcePoolCreator.createResourcePool(conf.sceConf));
+          BigInteger quotient = result.getFirst();
+          BigInteger remainder = result.getSecond();
 
           Assert.assertThat(quotient, Is.is(x.divide(d)));
           Assert.assertThat(remainder, Is.is(x.mod(d)));
+
         }
       };
     }
@@ -191,35 +139,30 @@ public class DivisionTests {
     public TestThread next(TestThreadConfiguration<ResourcePoolT, ProtocolBuilderNumeric> conf) {
 
       return new TestThread<ResourcePoolT, ProtocolBuilderNumeric>() {
-        private final BigInteger[] x = new BigInteger[] {new BigInteger("1234567"),
+        private final BigInteger[] x = new BigInteger[]{new BigInteger("1234567"),
             BigInteger.valueOf(1230121230), BigInteger.valueOf(313222110),
             BigInteger.valueOf(5111215), BigInteger.valueOf(6537)};
         private final BigInteger d = BigInteger.valueOf(1110);
         private final int n = x.length;
 
-        private List<Computation<BigInteger>> results = new ArrayList<>(n);
 
         @Override
         public void test() throws Exception {
-          TestApplication app = new TestApplication() {
-            @Override
-            public ProtocolProducer prepareApplication(BuilderFactory factoryProducer) {
-              return ProtocolBuilderNumeric
-                  .createApplicationRoot((BuilderFactoryNumeric) factoryProducer, (builder) -> {
-                NumericBuilder numericBuilder = builder.numeric();
-                Computation<SInt> divisor = numericBuilder.input(d, 1);
-                for (BigInteger value : x) {
-                  Computation<SInt> dividend = numericBuilder.input(value, 1);
-                  Computation<SInt> division = builder.advancedNumeric().div(dividend, divisor);
-                  results.add(builder.numeric().open(division));
-                }
-              }).build();
+          Application<List<BigInteger>, ProtocolBuilderNumeric> app = (builder) -> {
+            List<Computation<BigInteger>> results = new ArrayList<>(n);
+            NumericBuilder numericBuilder = builder.numeric();
+            Computation<SInt> divisor = numericBuilder.input(d, 1);
+            for (BigInteger value : x) {
+              Computation<SInt> dividend = numericBuilder.input(value, 1);
+              Computation<SInt> division = builder.advancedNumeric().div(dividend, divisor);
+              results.add(builder.numeric().open(division));
             }
+            return () -> results.stream().map(Computation::out).collect(Collectors.toList());
           };
-          secureComputationEngine.runApplication(app,
+          List<BigInteger> results = secureComputationEngine.runApplication(app,
               ResourcePoolCreator.createResourcePool(conf.sceConf));
           for (int i = 0; i < n; i++) {
-            BigInteger actual = results.get(i).out();
+            BigInteger actual = results.get(i);
 
             BigInteger expected = x[i].divide(d);
 
